# finance-etc

./: .gitignore  Dockerfile_working  pyproject.toml  readme.md  readme_dev.md  requirements.txt
src/: csv_source_parser.py  duckdb_tax_func.py  financial_year_functions.py
src/finance_etc/: __init__.py  csv_source_parser.py  duckdb_tax_func.py  mortgage.py  myutils.py
test/: test_buy_amortized.py
