[project]
name = "finance-etc"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "sluo", email = "41530060+sluofoss@users.noreply.github.com" }
]
dependencies = [
    "numpy",
    "pandas",
    "duckdb",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "jupyterlab>=4.1",
    "seaborn",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/finance_etc"]
